--- a/intro_to_quantum_inf_processing/mystyle.sty
+++ b/intro_to_quantum_inf_processing/mystyle.sty
@@ -2,7 +2,7 @@
 % mystyle.sty
 \usepackage[utf8]{inputenc}
 \usepackage[left=2.75cm,right=2.75cm,top=2cm,bottom=3cm]{geometry}
-\usepackage{tcolorbox}
+\usepackage[most]{tcolorbox}
 \usepackage{subfiles} % <--- ajoute ça
 \usepackage{xcolor}
 \usepackage{amssymb}
@@ -188,6 +188,7 @@
         left=4mm, right=4mm, top=2mm, bottom=2mm,
         before skip=10pt,
         after skip=10pt
+ 
     }
 }
 
